<resources>
   <string name="appName">smsgoforward</string>
   <string name="actionSettings">Settings</string>
   <string name="actionLogs">Logs</string>
   <string name="actionDeleteLogs">Delete logs</string>

   <string name="delete">Delete</string>
   <string name="refresh">Refresh</string>

   <string name="addSmsConfig">Add SMS config</string>
   <string name="addSmtpConfig">Add SMTP config</string>

   <string name="configName">Config Name</string>
   <string name="forwardNumber">Forwarding number</string>
   <string name="includeSenderNumber">Include sender number:</string>
   <string name="includeSubjectLine">Include subject line:</string>
   <string name="subjectLine">Subject line</string>
   <string name="subjectLineHint">Enter subject line (optional)</string>

   <string name="addFilter">Add filter</string>
   <string name="filters">Filters (allowing):</string>
   <string name="filtersBlocking">Filters (blocking):</string>
   <string name="filtersForwardingAll">Filters: none (forwarding all)</string>
   <string name="filterNumber">Filter number</string>

   <string name="phoneNumberHint">555–555–5555</string>
   <string name="phoneNumberError">That isn\'t a valid phone number.</string>

   <string name="host">Host</string>
   <string name="hostHint">smtp.example.com</string>
   <string name="port">Port</string>
   <string name="portHint">587</string>
   <string name="protocol">Protocol:</string>
   <string name="username">Username</string>
   <string name="usernameHint">my.name@example.com</string>
   <string name="password">Password</string>
   <string name="passwordHint">••••••••••</string>
   <string name="fromAddress">From address</string>
   <string name="fromAddressHint">from.user@example.com</string>
   <string name="forwardAddress">Forward address</string>
   <string name="forwardAddressHint">to.user@example.com</string>

   <string name="sentFrom">Sent from: %s</string>

   <string name="settingsScreenName">sms➔settings</string>
   <string name="logsScreenName">sms➔logs</string>

   <string name="logsEnabled">Logs enabled</string>
   <string name="logcatEnabled">Logcat enabled</string>
   <string name="showMessageInLogs">Show message in logs</string>
   <!-- Strings related to login -->
   <string name="prompt_email">Email</string>
   <string name="prompt_password">Password</string>
   <string name="action_sign_in">Sign in or register</string>
   <string name="action_sign_in_short">Sign in</string>
   <string name="welcome">"Welcome!"</string>
   <string name="invalid_username">Not a valid username</string>
   <string name="invalid_password">Password must be >5 characters</string>
   <string name="login_failed">"Login failed"</string>
   <string name="login_gmail">Login To Gmail</string>
   <string name="title_activity_second">SecondActivity</string>

   <string name="app_name">FirebaseLoginSample</string>
   <string name="login_button_text">Login</string>
   <string name="logout_button_text">Logout</string>
   <string name="login_unsuccessful_msg">Login unsuccessful</string>
   <string name="welcome_message">It\'s currently %1$s.</string>
   <string name="welcome_message_authed">Hi %1$s! Did you know that %2$s.</string>
   <string name="login_prompt">Login to set customizations!</string>
   <string name="login_btn">Login</string>
   <string name="settings_btn">Settings</string>
   <string name="settings_fact_type_title">Fun Fact Type</string>

   <string name="fact_type_android">Android</string>
   <string name="fact_type_california">California</string>

   <!--Shared Preference Keys -->
   <string name="preference_fact_type_key">fact_type_pref</string>

</resources>
