<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
   xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
   xmlns:tools="http://schemas.android.com/tools"
   android:layout_width="match_parent"
   android:layout_height="match_parent"
   tools:context=".ui.logs.LogsActivity">

   <com.google.android.material.appbar.AppBarLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:theme="@style/AppTheme.AppBarOverlay">

      <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="?attr/colorPrimary"
         app:popupTheme="@style/AppTheme.PopupOverlay" />

   </com.google.android.material.appbar.AppBarLayout>

   <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_marginTop="?attr/actionBarSize"
      android:background="@color/surfaceColor"
      android:orientation="vertical"
      android:padding="@dimen/grid2Size">

      <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">

         <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/logsEnabled"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:backgroundTint="#00ffffff" />

         <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/settingsLogsEnabledSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

      </LinearLayout>

      <Space
         android:layout_width="match_parent"
         android:layout_height="@dimen/grid2Size" />

      <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">

         <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/logcatEnabled"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:backgroundTint="#00ffffff" />

         <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/settingsLogcatEnabledSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

      </LinearLayout>

      <Space
         android:layout_width="match_parent"
         android:layout_height="@dimen/grid2Size" />

      <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">

         <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/showMessageInLogs"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:backgroundTint="#00ffffff" />

         <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/settingsShowMessageInLogsSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

      </LinearLayout>

      <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">

         <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:backgroundTint="#00ffffff" />

         <Button
            android:id="@+id/GmailUtils"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_gmail" />
      </LinearLayout>

      <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"/>

      <androidx.core.widget.NestedScrollView
         android:id="@+id/scrollView"
         android:layout_width="match_parent"
         android:layout_height="453dp" />

   </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>